--- a/introduction.mdx
+++ b/introduction.mdx
@@ -27,10 +27,10 @@ import { Appear, Image, Notes } from 'mdx-deck'
 
 - A _very_ brief introduction to State Machines
 - A small replica of my personal journey with:
-  - State Machines, especially [xstate](https://Xstate.js.org/) in particular
   - [React Hooks](https://reactjs.org/docs/hooks-intro.html)
-- How to combine them together
-  - **A LOT** of code, buckle up!
+  - State Machines, especially [Xstate](https://xstate.js.org/) in particular
+  - How to combine them together
+- There will be **A LOT** of code, buckle up!
 
 ---
 
@@ -77,7 +77,7 @@ import { Appear, Image, Notes } from 'mdx-deck'
             href="http://slides.com/davidkhourshid/finite-state-machines#/22"
             target="_blank"
           >
-            Provide a common language for designers & developers.
+            Provide a common language for designers & developers
           </a>
         </li>
       </ul>
@@ -121,10 +121,10 @@ import { Appear, Image, Notes } from 'mdx-deck'
 
 <ul>
   <Appear>
-    <li>Complex UI flows require multiple states</li>
-    <li>Multiple states are generally too implicit</li>
-    <li>Implicit codes are harder to reason about</li>
-    <li>This causes hidden bugs everywhere due to "invisible states"</li>
+    <li>Complex UI flows require multiple states ⚛️</li>
+    <li>Multiple states are generally too implicit ⚛︎</li>
+    <li>Implicit codes are harder to reason about 🤔</li>
+    <li>This causes hidden bugs everywhere due to "invisible states" 🕶</li>
   </Appear>
 </ul>
 
