Edit implicit emoji

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -122,7 +122,7 @@ import { Appear, Image, Notes } from 'mdx-deck'
 <ul>
   <Appear>
     <li>Complex UI flows require multiple states ⚛️</li>
-    <li>Multiple states are generally too implicit ⚛︎</li>
+    <li>Multiple states are generally too implicit 🧐</li>
     <li>Implicit codes are harder to reason about 🤔</li>
     <li>This causes hidden bugs everywhere due to "invisible states" 🕶</li>
   </Appear>
