Edit slides link

--- a/conclusion.mdx
+++ b/conclusion.mdx
@@ -100,4 +100,9 @@ import { Appear } from 'mdx-deck'
 - Rodrigo Pombo [@pomber](https://twitter.com/pomber)<br />
   for his amazing [code-surfer@2.0.0-alpha5](https://www.npmjs.com/package/code-surfer/v/2.0.0-alpha.5)
 
-https://bit.ly/jsconf-asia-2019-state-machines
+<small>
+  {' '}
+  <a href="https://bit.ly/jsconf-asia-2019-state-machines">
+    https://bit.ly/jsconf-asia-2019-state-machines
+  </a>
+</small>
