Balance Thank You emojies

--- a/conclusion.mdx
+++ b/conclusion.mdx
@@ -93,7 +93,7 @@ import { Appear } from 'mdx-deck'
 
 ---
 
-# Thank You 🙏🏼
+# 🙏🏼 Thank You 🙏🏼
 
 - David Khourshid [@davidkpiano](https://twitter.com/davidkpiano)<br />
   for his amazing [Xstate](https://xstate.js.org/) library
